Accept payments.
